--- a/src/main/java/com/creatingskies/game/main/Main.fxml
+++ b/src/main/java/com/creatingskies/game/main/Main.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="150.0" maxWidth="600.0" minHeight="150.0" minWidth="600.0" prefHeight="150.0" prefWidth="600.0" styleClass="background" stylesheets="@../resources/css/style.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.main.MainController">
+<AnchorPane maxHeight="150.0" maxWidth="600.0" minHeight="150.0" minWidth="600.0" prefHeight="150.0" prefWidth="600.0" styleClass="background" stylesheets="/css/style.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.main.MainController">
    <children>
       <GridPane layoutX="21.0" layoutY="14.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
         <columnConstraints>
@@ -31,7 +31,7 @@
                <children>
                   <ImageView pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../resources/images/ic_account_child_128.png" />
+                        <Image url="/images/ic_account_child_128.png" />
                      </image>
                   </ImageView>
                   <Label text="Users" GridPane.rowIndex="1">
@@ -52,7 +52,7 @@
                <children>
                   <ImageView pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../resources/images/ic_event_128.png" />
+                        <Image url="/images/ic_event_128.png" />
                      </image>
                   </ImageView>
                   <Label text="Events" GridPane.rowIndex="1">
@@ -73,7 +73,7 @@
                <children>
                   <ImageView pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../resources/images/ic_desktop_windows_128.png" />
+                        <Image url="/images/ic_desktop_windows_128.png" />
                      </image>
                   </ImageView>
                   <Label text="Games" GridPane.rowIndex="1">
@@ -94,7 +94,7 @@
                <children>
                   <ImageView pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../resources/images/ic_equalizer_128.png" />
+                        <Image url="/images/ic_equalizer_128.png" />
                      </image>
                   </ImageView>
                   <Label text="Statistics" GridPane.rowIndex="1">
