--- a/src/main/java/com/creatingskies/game/common/MainLayout.fxml
+++ b/src/main/java/com/creatingskies/game/common/MainLayout.fxml
@@ -5,6 +5,6 @@
 <?import javafx.scene.layout.BorderPane?>
 
 
-<BorderPane styleClass="background" stylesheets="/css/style.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxWidth="800.0" minWidth="800.0" prefWidth="800.0" styleClass="background" stylesheets="/css/style.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
 	<!-- TODO Add Nodes -->
 </BorderPane>
