--- a/src/main/java/com/creatingskies/game/common/MainLayout.fxml
+++ b/src/main/java/com/creatingskies/game/common/MainLayout.fxml
@@ -38,7 +38,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button id="backToMainButton" mnemonicParsing="false" GridPane.rowIndex="1">
+            <Button id="backToMainButton" mnemonicParsing="false" GridPane.rowIndex="1" visible="false">
                <GridPane.margin>
                   <Insets top="10.0" />
                </GridPane.margin>
