fix exact image only clickable on launcher. added style on launcher pane. added css for choicebox and launcher.

--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -144,3 +144,14 @@ PasswordField:focused {
 	-fx-background-color: transparent;
 }
 
+.choice-box .label {
+     -fx-text-fill: #222222; 
+}
+
+.launcher-pane {
+	-fx-background-radius: 3;
+}
+
+.launcher-pane:hover {
+	-fx-background-color: #333333;
+}
