--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -181,3 +181,15 @@ PasswordField:focused {
 	-fx-border-color: transparent, derive(#1d1d1d,20%);
 	-fx-border-width: 5;
 }
+.map-designer-tile {
+	-fx-border-color: #375a7f;
+	-fx-border-width: 0.5;
+	-fx-background-color: white;
+	-fx-cursor: hand;
+}
+.map-blank-tile {
+	-fx-background-color: white;
+	-fx-cursor: hand;
+	-fx-border-width: 0.5;
+	-fx-border-color: #375a7f;
+}
