--- a/src/main/java/com/creatingskies/game/common/MainLayout.fxml
+++ b/src/main/java/com/creatingskies/game/common/MainLayout.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
@@ -11,47 +13,48 @@
 
 <BorderPane maxHeight="400.0" maxWidth="800.0" minHeight="400.0" minWidth="800.0" prefHeight="400.0" prefWidth="800.0" styleClass="background" stylesheets="/css/style.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
    <top>
-      <GridPane maxHeight="50.0" minHeight="50.0" prefHeight="50.0" BorderPane.alignment="CENTER">
+      <GridPane maxHeight="50.0" minHeight="100.0" prefHeight="50.0" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="50.0" minHeight="0.0" prefHeight="14.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="50.0" minHeight="0.0" prefHeight="14.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label id="viewTitle" text="" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets left="40.0" top="10.0" />
-               </GridPane.margin>
-            </Label>
-            <Button id="logoutButton" mnemonicParsing="false" styleClass="button-danger" text="Logout" visible="false" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-               <graphic>
-                  <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="/images/power-off_f04124_32.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Button id="backToMainButton" mnemonicParsing="false" GridPane.rowIndex="1" visible="false">
-               <GridPane.margin>
-                  <Insets top="10.0" />
-               </GridPane.margin>
-               <graphic>
-                  <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="/images/arrow-left_ffffff_32.png" />
-                     </image></ImageView>
-               </graphic>
-            </Button>
+            <HBox alignment="CENTER_RIGHT" prefWidth="390.0" spacing="10.0" GridPane.columnIndex="1">
+               <children>
+                  <Label id="currentLoggedUser" textAlignment="RIGHT" />
+                  <Button id="backToMainButton" mnemonicParsing="false" text="Main" visible="false" />
+                  <Button id="logoutButton" mnemonicParsing="false" styleClass="button-danger" text="Logout" visible="false">
+                     <graphic>
+                        <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="/images/power-off_f04124_32.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+            <HBox alignment="BOTTOM_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" style="-fx-border-insets: 0; -fx-border-width: 2px;">
+               <children>
+                  <Label styleClass="app-title" text="Game Editor">
+                     <font>
+                        <Font size="30.0" />
+                     </font>
+                  </Label>
+                  <Label id="viewTitle" text="" />
+               </children>
+            </HBox>
+            <Line endX="200.0" startX="-100.0" GridPane.rowIndex="1" GridPane.valignment="TOP" />
          </children>
          <BorderPane.margin>
-            <Insets bottom="20.0" />
+            <Insets left="10.0" right="10.0" />
          </BorderPane.margin>
       </GridPane>
    </top>
