--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -1,195 +1,88 @@
-.background {
-    -fx-background-color: #222222;
+.app-title{
+	-fx-font-size: 30px;
+	-fx-font-weight: bold;
 }
-
-.label {
-    -fx-font-size: 11pt;
-    -fx-font-family: "Segoe UI Semibold";
-    -fx-text-fill: white;
-    -fx-opacity: 0.6;
-}
-
 #viewTitle {
-	-fx-font-size: 20pt;
-	-fx-opacity: 1;
+	-fx-font-size: 24px;
+	-fx-text-fill: #6f6f6f;
+}
+.table-row-button {
+	-px-min-heigth: 16px;
+	-px-min-width: 32px;
+	-fx-pref-height: 16px;
+	-fx-pref-width: 32px;
+	-px-max-heigth: 16px;
+	-px-max-width: 32px;
 }
 
-#logoutButton {
-	-fx-background-color: transparent;
-	-fx-cursor: hand;
+.root {
+	-fx-font-size: 16px;
+	-fx-text-fill: #2c3e50;
+	-fx-font-family: "Arial";
 }
 
-#backToMainButton {
-	-fx-background-color: transparent;
-	-fx-cursor: hand;
+.background {
+	-fx-background-color: #ffffff;
 }
 
-Button {
-	-fx-font-size: 15px;
+.button {
+	-fx-background-color: #2c3e50;
 	-fx-background-radius: 4px;
+	-fx-text-fill: #ffffff;
 	-fx-cursor: hand;
 }
 
-.button-default {
-	-fx-text-fill: #ffffff;
-	-fx-background-color: #464545;
+.button:hover {
+	-fx-background-color: #1a242f;
 }
 
-.button-default:hover {
-	-fx-background-color: #2c2c2c;
+.text-field,
+.text-area,
+.password-field{
+	-fx-background-color: #ffffff;
+	-fx-border-width: 2px;
+	-fx-border-color: #dce4ec;
 }
 
-.button-primary {
-	-fx-text-fill: #ffffff;
-	-fx-background-color: #375a7f;
-}
-
-.button-primary:hover {
-	-fx-background-color: #28415b;
-}
-
-.button-success {
-	-fx-text-fill: #ffffff;
-	-fx-background-color: #00bc8c;
-}
-
-.button-success:hover {
-	-fx-background-color: #008966;
-}
-
-.button-info {
-	-fx-text-fill: #ffffff;
-	-fx-background-color: #3498db;
-}
-
-.button-info:hover {
-	-fx-background-color: #217dbb;
-}
-
-.button-warning {
-	-fx-text-fill: #ffffff;
-	-fx-background-color: #f39c12;
-}
-
-.button-warning:hover {
-	-fx-background-color: #c87f0a;
-}
-
-.button-danger {
-	-fx-text-fill: #ffffff;
-	-fx-background-color: #e74c3c;
-}
-
-.button-danger:hover {
-	-fx-background-color: #d62c1a;
-}
-
-TextField,
-PasswordField{
-	-fx-font-size: 15px;
-	-fx-focus-color: -fx-control-inner-background ;
-    -fx-faint-focus-color: -fx-control-inner-background ;
-}
-
-TextField:focused,
-PasswordField:focused {
-	-fx-background-color: linear-gradient(to bottom, derive(-fx-text-box-border, -10%), -fx-text-box-border),
-        linear-gradient(from 0px 0px to 0px 5px, derive(-fx-control-inner-background, -9%), -fx-control-inner-background);
+.text-field:focused,
+.text-area:focused,
+.password:focused {
+	-fx-border-color: #2c3e50;
 }
 
 .table-view {
-    -fx-base: #1d1d1d;
-    -fx-control-inner-background: #1d1d1d;
-    -fx-background-color: #1d1d1d;
-    -fx-table-cell-border-color: transparent;
-    -fx-table-header-border-color: transparent;
+    -fx-base: transparent;
+    -fx-control-inner-background: transparent;
+    -fx-background-color: transparent;
     -fx-padding: 5;
 }
-
-.table-view .column-header-background {
-    -fx-background-color: transparent;
-}
-
-.table-view .column-header, .table-view .filler {
-    -fx-size: 35;
-    -fx-border-width: 0 0 1 0;
-    -fx-background-color: transparent;
-    -fx-border-color: 
-        transparent
-        transparent
-        derive(-fx-base, 80%) 
-        transparent;
-    -fx-border-insets: 0 10 1 0;
+.table-view .column-header {
+	-fx-background-color: #2c3e50;
 }
 
 .table-view .column-header .label {
-    -fx-font-size: 20pt;
-    -fx-font-family: "Segoe UI Light";
-    -fx-text-fill: white;
+    -fx-text-fill: #ffffff;
     -fx-alignment: center-left;
-    -fx-opacity: 1;
 }
-
-.table-view:focused .table-row-cell:filled:focused:selected {
-    -fx-background-color: -fx-focus-color;
+/* Each row in the table is a table-row-cell. Inside a table-row-cell is any
+   number of table-cell. */
+.table-row-cell {
+    -fx-background-color: -fx-table-cell-border-color, -fx-control-inner-background;
+    -fx-padding: 0.0em; /* 0 */
+    -fx-text-fill: -fx-text-inner-color;
 }
-
-.table-row-button {
-	-fx-background-color: transparent;
-	-fx-padding: 0;
-	-fx-cursor: hand;
+.table-row-cell:odd {
+    -fx-background-color: #f9f9f9;
 }
-
-.table-row-button:hover {
-	-fx-background-color: transparent;
+.table-row-cell:focused,
+.tree-table-row-cell:focused {
+    -fx-background-color: #ecf0f1;
 }
-
-.choice-box .label {
-     -fx-text-fill: #222222; 
+.table-row-cell:focused:odd {
+    -fx-background-color: #ecf0f1;
 }
-
-.launcher-pane {
-	-fx-background-radius: 3;
-}
-
-.launcher-pane:hover {
-	-fx-background-color: #333333;
-}
-
-.split-pane {
-	-fx-background-color: transparent;
-    -fx-padding: 1 0 0 0;
-}
-
-.split-pane > .split-pane-divider {
-    -fx-border-color: transparent #1d1d1d transparent #1d1d1d;
-    -fx-background-color: transparent, derive(#1d1d1d,20%);
-}
-.scroll-pane {
-	-fx-background-color: transparent;
-}
-.scroll-pane > .viewport  { 
-	-fx-background-color: transparent;
-}
-.scroll-pane > .anchor-pane {
-	-fx-background-color: transparent;
-}
-.background-white {
-	-fx-background-color: #ffffff;
-}
-.border-white {
-	-fx-border-color: transparent, derive(#1d1d1d,20%);
-	-fx-border-width: 5;
-}
-.map-designer-tile {
-	-fx-border-color: #375a7f;
-	-fx-border-width: 0.5;
-	-fx-background-color: white;
-	-fx-cursor: hand;
-}
-.map-blank-tile {
-	-fx-background-color: white;
-	-fx-cursor: hand;
-	-fx-border-width: 0.5;
-	-fx-border-color: #375a7f;
+.table-cell {
+    -fx-text-fill: #2c3e50;
+    -fx-border-color: transparent;
+    -fx-alignment: CENTER-LEFT;
 }
