--- a/src/main/java/com/creatingskies/game/login/Login.fxml
+++ b/src/main/java/com/creatingskies/game/login/Login.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="loginContainer" maxHeight="200.0" maxWidth="500.0" minHeight="200.0" minWidth="500.0" prefHeight="200.0" prefWidth="500.0"  xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.login.LoginController">
+<AnchorPane id="loginContainer" maxHeight="200.0" maxWidth="500.0" minHeight="200.0" minWidth="500.0" prefHeight="200.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.login.LoginController">
    <children>
       <GridPane layoutX="44.0" layoutY="30.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
         <columnConstraints>
@@ -30,5 +30,6 @@
             <Button defaultButton="true" mnemonicParsing="false" onAction="#login" styleClass="button-primary" text="Login" />
         </buttons>
       </ButtonBar>
+      <Label layoutX="21.0" layoutY="178.0" onMouseClicked="#handleForgotPassword" text="Forgot Password" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" />
    </children>
 </AnchorPane>
