--- a/src/main/java/com/creatingskies/game/config/event/GameEventProperties.fxml
+++ b/src/main/java/com/creatingskies/game/config/event/GameEventProperties.fxml
@@ -12,8 +12,8 @@
          <children>
             <HBox alignment="CENTER_LEFT" maxHeight="50.0" minHeight="50.0" prefHeight="50.0" prefWidth="200.0" spacing="10.0">
                <children>
-                  <Label maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Company" />
-                  <ComboBox fx:id="companyComboBox" maxWidth="350.0" minWidth="350.0" prefHeight="25.0" prefWidth="350.0" />
+                  <Label maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Group" />
+                  <ComboBox fx:id="groupComboBox" maxWidth="350.0" minWidth="350.0" prefHeight="25.0" prefWidth="350.0" />
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" maxHeight="50.0" minHeight="50.0" prefHeight="50.0" prefWidth="280.0" spacing="10.0">
