--- a/src/main/java/com/creatingskies/game/config/company/Company.fxml
+++ b/src/main/java/com/creatingskies/game/config/company/Company.fxml
@@ -114,6 +114,9 @@
                      </children>
                   </GridPane>
                </children>
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="5.0" right="10.0" top="10.0" />
+               </GridPane.margin>
             </GridPane>
          </children>
       </GridPane>
