--- a/src/main/java/com/creatingskies/game/editor/Designer.fxml
+++ b/src/main/java/com/creatingskies/game/editor/Designer.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" style=": ;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.map.MapDesignerController">
+<AnchorPane minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.editor.MapDesignerController">
    <children>
       <SplitPane fx:id="mapDesignerContainer" dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
         <items>
@@ -33,11 +33,6 @@
                         <HBox alignment="BOTTOM_LEFT" prefHeight="27.0" prefWidth="209.0">
                            <children>
                               <Label text="Design" />
-                              <Button mnemonicParsing="false" onAction="#uploadTileImage" prefWidth="75.0" styleClass="button-default" text="Add Tile">
-                                 <HBox.margin>
-                                    <Insets left="90.0" />
-                                 </HBox.margin>
-                              </Button>
                            </children>
                         </HBox>
                         <FlowPane fx:id="tileImageSelections" hgap="5.0" minHeight="50.0" vgap="5.0">
