--- a/src/main/java/com/creatingskies/game/core/GameCore.fxml
+++ b/src/main/java/com/creatingskies/game/core/GameCore.fxml
@@ -48,14 +48,8 @@
                         </Label>
                      </children>
                   </GridPane>
-                  <ImageView fx:id="warningImageView" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" visible="false">
-                     <image>
-                        <Image url="@warning.png" />
-                     </image></ImageView>
-                  <ImageView fx:id="stopImageView" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" visible="false">
-                     <image>
-                        <Image url="@stop.png" />
-                     </image></ImageView>
+                  <ImageView fx:id="warningImageView" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" visible="false" />
+                  <ImageView fx:id="stopImageView" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" visible="false" />
 					</children>
 					<padding>
 						<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
