--- a/src/main/java/com/creatingskies/game/core/GameCore.fxml
+++ b/src/main/java/com/creatingskies/game/core/GameCore.fxml
@@ -12,62 +12,57 @@
 	<children>
 		<HBox layoutY="82.0" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
 			<children>
-				<VBox alignment="TOP_CENTER" maxWidth="200.0" minWidth="200.0" spacing="5.0">
-					<children>
-						<Button mnemonicParsing="false" onAction="#handleGameStart" prefHeight="33.0" prefWidth="180.0" text="Start Game" />
-                  <GridPane>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0">
+               <children>
+						<Button layoutX="10.0" layoutY="529.0" mnemonicParsing="false" onAction="#handleGameStart" prefHeight="46.0" prefWidth="180.0" text="START" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" />
+                  <GridPane layoutX="16.0" layoutY="174.0" prefHeight="60.0" prefWidth="160.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="119.0" minWidth="10.0" prefWidth="101.0" />
-                      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="84.0" minWidth="10.0" prefWidth="79.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="119.0" minWidth="10.0" prefWidth="94.0" />
+                      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="66.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-      								<Label fx:id="durationLabel" text="0.0" GridPane.columnIndex="1">
-      									<font>
-      										<Font size="24.0" />
-      									</font>
-      								</Label>
+                        <Label text="Slow Factor" GridPane.rowIndex="1">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
                         <Label text="Duration">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Label>
-            				<Label fx:id="countDownLabel" prefHeight="17.0" prefWidth="0.0" text="3" GridPane.columnIndex="1" GridPane.rowIndex="1">
-            					<font>
-            						<Font size="24.0" />
-            					</font>
-            				</Label>
-                        <Label text="Countdown" GridPane.rowIndex="1">
+      								<Label fx:id="durationLabel" text="0.0" GridPane.columnIndex="1">
+      									<font>
+      										<Font size="24.0" />
+      									</font>
+      								</Label>
+                        <Label fx:id="difficultyLabel" text="0.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                        <Label text="Difficulty" GridPane.rowIndex="2">
-                           <font>
-                              <Font size="14.0" />
+                              <Font size="24.0" />
                            </font>
                         </Label>
                      </children>
                   </GridPane>
-                  <ImageView fx:id="warningImageView" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" visible="false" />
-                  <Label fx:id="difficultyLabel" prefHeight="35.0" prefWidth="119.0" text="0">
+                  <Label fx:id="countDownLabel" layoutX="56.0" layoutY="403.0" text="Game starts in">
                      <font>
-                        <Font size="24.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <ImageView fx:id="stopImageView" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" visible="false" />
-                  <Pane fx:id="test" prefHeight="200.0" prefWidth="200.0" />
-					</children>
-					<padding>
-						<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-					</padding>
-				</VBox>
+      				<Label fx:id="countDownValue" layoutX="90.0" layoutY="416.0" text="3">
+      					<font>
+      						<Font size="36.0" />
+      					</font>
+      				</Label>
+               </children>
+            </AnchorPane>
             <Pane fx:id="pane">
                <children>
+                  <ImageView fx:id="stopImageView" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" visible="false" />
+                  <ImageView fx:id="warningImageView" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" visible="false" />
                   <GridPane fx:id="mapTiles" />
                </children>
             </Pane>
