--- a/src/main/java/com/creatingskies/game/startup/MainLayout.fxml
+++ b/src/main/java/com/creatingskies/game/startup/MainLayout.fxml
@@ -26,8 +26,8 @@
             <HBox alignment="CENTER_RIGHT" prefWidth="390.0" spacing="10.0" GridPane.columnIndex="1">
                <children>
                   <Label id="currentLoggedUser" textAlignment="RIGHT" />
-                  <Button id="backToMainButton" mnemonicParsing="false" text="Main" visible="false" />
-                  <Button id="logoutButton" mnemonicParsing="false" styleClass="button-danger" text="Logout" visible="false">
+                  <Button id="backToMainButton" mnemonicParsing="false" styleClass="button-default" text="Main" visible="false" />
+                  <Button id="logoutButton" mnemonicParsing="false" styleClass="button-default" text="Logout" visible="false">
                      <graphic>
                         <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -51,7 +51,6 @@
                   <Label id="viewTitle" text="" />
                </children>
             </HBox>
-            <Line endX="200.0" startX="-100.0" GridPane.rowIndex="1" GridPane.valignment="TOP" />
          </children>
          <BorderPane.margin>
             <Insets left="10.0" right="10.0" />
